# kubectl-topology-skew

./: .gitignore  .justfile  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: coverage.yaml  release.yml  test.yaml
src/: all.rs  arg.rs  daemonset.rs  deployment.rs  job.rs  kube.rs  main.rs  node.rs  pod.rs  statefulset.rs  topology.rs  view.rs
tests/: case1_node.yaml  case3_node.yaml  case3_pod.yaml  case4_node.yaml  deploy_no_options_deploy.yaml  deploy_no_options_pods1.yaml  deploy_no_options_pods2.yaml  ds_no_options_ds.yaml  ds_no_options_pods1.yaml  ds_no_options_pods2.yaml  job_no_options_job.yaml  job_no_options_pods1.yaml  job_no_options_pods2.yaml  node_ok_nodes.yaml  node_selector_nodes.yaml  nodes.yaml  pod_no_options_pods.yaml  pod_one_domain_pods.yaml  pod_selector_pods.yaml  pod_selectors_pods.yaml  sts_no_options_pods1.yaml  sts_no_options_pods2.yaml  sts_no_options_sts.yaml
