[package]
name = "kubectl-topology-skew"
version = "0.1.0"
authors = ["Wataru Matsui <watawuwu@3bi.tech>"]
readme = "README.md"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "kubectl plugin to display pod count and skew per topology"
repository = "https://github.com/watawuwu/kubectl-topology-skew"
keywords = [
    "kubernetes",
    "kubectl",
    "kubernetes-topology-skew",
    "krew-plugin",
    "cli",
]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
# Why are dashes and underscore mixed up in the name?
# https://kubernetes.io/docs/tasks/extend-kubectl/kubectl-plugins/#names-with-dashes-and-underscores
name = "kubectl-topology_skew"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3.30"
k8s-openapi = { version = "0.21", default-features = false, features = [
    "v1_29",
] }
kube = { version = "0", features = ["runtime", "oauth", "oidc"] }
log = "0.4.13"
pretty_env_logger = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0"
strum = { version = "0", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
itertools = "0"
tabled = "0"
derive_more = "0"

[dev-dependencies]
hyper = { version = "=1.2", features = [
    "full",
] } # fixed version to match kube-rs
http = "=1.1" # fixed version to match kube-rs
tower-test = "=0.4" # fixed version to match kube-rs

[profile.release]
strip = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.11.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "watawuwu/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Publish jobs to run in CI
pr-run-mode = "plan"
